Avoid running unit tests if a smart card is inserted